--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@material-tailwind/react": "^2.0.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
