--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
     "@material-tailwind/react": "^2.0.4",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "uuid": "^9.0.1"
